Update README (#44)
Signed-off-by: Andrew Tur <andrew.tur@learnattack.de>

Co-authored-by: Andrew Tur <andrew.tur@learnattack.de>